# Mental_Chat_Bot

./: README.md  notebook.ipynb  pyproject.toml  requirements.txt
Data_Collection_Notebooks/: Mental_Chat_Bot_EDA.ipynb
Data_Collection_Notebooks/EDA_results/Peraboom_ADHD_Related_Concerns/: avg_length_by_label.csv  word_counts.csv
Data_Collection_Notebooks/EDA_results/joangaes_depression/: avg_length_by_label.csv  avg_text_length.csv
Data_Collection_Notebooks/EDA_results/solomonk_reddit_mental_health_posts/: class_balance.csv  entropy.csv
Data_Collection_Notebooks/EDA_results/thePixel42_depression_detection/: avg_length_by_label.csv  entropy.csv  word_counts.csv
Indumathy/: .gitignore  README.md  package-lock.json
Indumathy/frontend/: package-lock.json  package.json
Indumathy/frontend/src/: App.js
Indumathy/frontend/src/components/: AssessmentAnxiety.js  AssessmentDepression.js  AssessmentFOMO.js  AssessmentSelection.js  AssessmentStress.js  ChatPage.js  LandingPage.js  MentalHealthSelection.js  PrivacyConsent.js  Profile.js  UserInfo.js
Indumathy/mentalhealth_chatbot/: .gitignore  README.md  app.py  pyproject.toml
Indumathy/mentalhealth_chatbot/fastapi_app/: main.py
Indumathy/mentalhealth_chatbot/outputs/: emotion.md  suggestions.md
Indumathy/mentalhealth_chatbot/pages/: 10_Chat.py  1_User_Info.py  2_Mental_Health.py  3_Privacy_Consent.py  4_Profile.py  5_Assessment_Selection.py  6_Assessment_Depression.py  7_Assessment_Anxiety.py  8_Assessment_Stress.py  9_Assessment_FOMO.py
Indumathy/mentalhealth_chatbot/src/mentalhealth_chatbot/: crew.py  main.py
Kshitija/my_project/: .gitignore  pyproject.toml  report.md  streamlit_app.py
Kshitija/my_project/src/my_project/: crew.py  (+1 more)
MedhaManoj/: .gitignore  agents.py  tools.py
MedhaManoj/mentalhealthbot/: README.md  pyproject.toml
MedhaManoj/mentalhealthbot/src/mentalhealthbot/: crew.py  main.py
MedhaManoj/mentalhealthbot/src/mentalhealthbot/config/: agents.yaml  tasks.yaml
Meta Sek/: agents.yaml  crew.yaml  tasks.yaml
Meta Sek/__MACOSX/: ._emotion_detector_yaml_cli_meta_sek
Ortal files/CREWAI USING YAML/: README.md
Ortal files/Data_Collection_Notebooks/: Mental_Chat_Bot_EDA_with_app.ipynb
Ortal's files/Agent_model_Layer1/: Basic_Skeleton_MLOPS_Layer1_NLP.ipynb
Ortal's files/CREWAI/: README.md  crew.py
Ortal's files/CREWAI USING CODE (IGNORE THIS FOR NOW)/: main.py
Ortal's files/CREWAI USING YAML/: README.md  app.py  requirements.txt
Ortal_files/CREWAI USING YAML/: pyproject.toml
Ortal_files/Data_Collection_Notebooks/: app.py
Ortal_files/POC with STT/anandhu_pr/mental_health_chat_bot/: pyproject.toml
Ortal_files/POC with STT/anandhu_pr/mental_health_chat_bot/src/mental_health_chat_bot/: crew.py  main.py  speech_to_text.py
RAG_Layer2/: RAG_for_Layer2.ipynb
Sundara_files/mentalhealth_chatbot_crewai/: .env
anandhu_pr/mental_health_chat_bot/: .gitignore  requirements.txt
anandhu_pr/mental_health_chat_bot/logs/: conversation_log.txt  emotion_detection.md  orchestrate.md  rag_reading.md  rag_retrieval.md  safety_check.md  suggestion.md
anandhu_pr_only/mental_health_chat_bot/: requirements.txt
chahiri_files/: readme.md  requirements.txt
chahiri_files/anandhu_pr/mental_health_chat_bot/: .env.sample  .gitignore
chahiri_files/notebooks/: notebook.ipynb  output.txt
latest_ai_development/: pyproject.toml
react_voice_chat_app/: package.json
react_voice_chat_app/public/: index.html
react_voice_chat_app/src/: App.js
sundara_files/mentalhealth_chatbot_crewai/: README.md  pyproject.toml  report.md
(+51 files in other folders)
