[project]
name = "mentalhealthbot"
version = "0.1.0"
description = "mentalhealthbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
mentalhealthbot = "mentalhealthbot.main:run"
run_crew = "mentalhealthbot.main:run"
train = "mentalhealthbot.main:train"
replay = "mentalhealthbot.main:replay"
test = "mentalhealthbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.poetry.dependencies]
onnxruntime = "1.20.0"