[project]
name = "ortal_crewai"
version = "0.1.0"
description = "Ortal_CrewAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
ortal_crewai = "ortal_crewai.main:run"
run_crew = "ortal_crewai.main:run"
train = "ortal_crewai.main:train"
replay = "ortal_crewai.main:replay"
test = "ortal_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
