[project]
name = "mentalhealth_chatbot_crewai"
version = "0.1.0"
description = "mentalhealth-chatbot-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
mentalhealth_chatbot_crewai = "mentalhealth_chatbot_crewai.main:run"
run_crew = "mentalhealth_chatbot_crewai.main:run"
train = "mentalhealth_chatbot_crewai.main:train"
replay = "mentalhealth_chatbot_crewai.main:replay"
test = "mentalhealth_chatbot_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
